--- a/src/sass/modules/home/home/_main.scss
+++ b/src/sass/modules/home/home/_main.scss
@@ -1,1 +1,6 @@
-@import './main/about'
+@import './main/about';
+@import './main/specials';
+@import './main/chefs';
+@import './main/menu';
+@import './main/reservation';
+@import './main/contact';
