--- a/src/sass/modules/home/home/_footer.scss
+++ b/src/sass/modules/home/home/_footer.scss
@@ -68,18 +68,18 @@ footer {
 }
 }
 
-@media (max-width:480px){
-footer{
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-.footer{
-    display: flex;
-    flex-direction: column;
-    text-align: start;
-}
-}
-}
+// @media (max-width:480px){
+// footer{
+//     display: flex;
+//     flex-direction: column;
+//     padding: 0;
+// .footer{
+//     display: flex;
+//     flex-direction: column;
+//     text-align: start;
+// }
+// }
+// }
 
 
 
