--- a/src/sass/modules/home/home/_main.scss
+++ b/src/sass/modules/home/home/_main.scss
@@ -4,3 +4,5 @@
 @import './main/menu';
 @import './main/reservation';
 @import './main/contact';
+@import './main/gallery';
+@import './main/events';
