--- a/src/sass/modules/home/home/_header.scss
+++ b/src/sass/modules/home/home/_header.scss
@@ -12,6 +12,7 @@ header{
     position: relative;
     height: 100vh;
     width: 100%;
+    z-index: 100000000 ;
     nav{
         background-color: black;
         position: fixed;
