--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30576,7 +30576,7 @@ header nav {
   top: 0vh;
   left: 0;
   color: #fff;
-  z-index: 100 !important;
+  z-index: 1000000 !important;
 }
 header nav a h1, header nav a .h1 {
   font-weight: bold;
