--- a/src/sass/modules/home/home/_header.scss
+++ b/src/sass/modules/home/home/_header.scss
@@ -19,7 +19,7 @@ header{
         top: 0vh;
         left: 0;
         color: #fff;
-        z-index: 100 !important;
+        z-index: 1000000  !important;
         a{
             h1{
                 font-weight: bold;
